# gesture_driven_robot

./: README.md
RobotFisico/: compose.bat  docker-compose.yml  gesture.py
RobotFisico/controller/: Dockerfile  controller.py  mkimage.bat  requirements.txt
RobotFisico/mosquitto/config/: mosquitto.conf  mosquitto.passwd
RobotFisico/mosquitto/data/: mosquitto.db
RobotFisico/perception/: drop.sh  mkimage.bat  perception.py
RobotVirtuale/: PioneerScene.ttt  compose.bat  docker-compose.yml  gesture.py  readme.md
RobotVirtuale/action/: Dockerfile  action.py  drop.sh  mkimage.bat
RobotVirtuale/controller/: Dockerfile  controller.py
RobotVirtuale/mosquitto/config/: mosquitto.passwd
RobotVirtuale/mosquitto/data/: mosquitto.db
RobotVirtuale/perception/: Dockerfile  perception.py  requirements.txt
RobotVirtuale/sense/: Dockerfile  drop.sh  mkimage.bat  requirements.txt  sense.py
arduino/: platformio.ini  radar.py
arduino/src/: main.cpp
raspberry-pi/movimento-ISRLAB/: CMakeLists.txt
raspberry-pi/movimento-ISRLAB/src/: main.cpp
raspberry-pi/sensor-ISRLAB/: sensor.py
raspberry-pi/tags-ISRLAB/: CMakeLists.txt
raspberry-pi/tags-ISRLAB/src/: event_loop.cpp  event_loop.h  image.h  main.cpp
